# EXPLORE

./: .gitignore  README.md  pyproject.toml
configs/: IL_flow.yaml  eval_policy.yaml  fingerBox.h5  fingerBox.xml  fingerRamp.g  fingerRamp.xml  fingerRamp_onRamp.h5  guided_RL.yaml  new_rnd_twoFingers.h5  pandasTable_ball.h5  pandasTable_ball_grasps.h5  postprocessing.yaml  trajectory_generation.yaml  trajectory_generation_panda.yaml  trajectory_generation_twoFingers.yaml  twoFingers.xml
experiments/: .gitignore  bbo_spline_utils.py  check_stats copy 2.ipynb  check_stats copy.ipynb  check_stats.ipynb  check_stats.py  close_humanoid_configs.txt  compute_hausdorff.py  data_analysis.ipynb  data_analysis.py  eval_all.py  mppi_analysis.py  oldh5_newh5.py  plot_all_knns.py  plot_all_n_best_actions.py  remove_redundant_states.py  results_comparison.py  save_and_load_splines.ipynb  smoothing.ipynb  spline_bbo_rl.py  spline_bbo_rl_humanoid.py  stable_configs.h5  stable_configs_copy.h5  state_econding.py  state_sampling.py  state_sampling_spline_opt.py  test_custom_states.py  test_dataset.py  test_stage_env.py  test_threaded_env.py  test_warp_env.py  view_config.py  warping.py
plots/: knn_ablation.py  n_best_action_ablation.py
scripts/: 1.5_postprocessing.py  1_generate_data.py  1_generate_short_trajs.py  1_generate_stable_configs.py  2.5_IL_steering.py  2.5_extract_paths.py  2_IL_train.py  2_RL_train.py  2_generate_paths.py  2_train.py  3.5_IL_steering.py  3_CSRL_train.py  3_IL_eval.py  3_IL_train.py  3_RL_eval.py  3_RL_train.py  3_RL_train_new.py  3_evaluate.py  4_RL_eval.py  (+3 more)
(+172 files in other folders)
