[tool.poetry]
name = "EXPLORE"
version = "0.0.0"
description = ""
authors = ["Eckart Cobo-Briesewitz"]
license = "MIT"
readme = "README.md"
packages = [{ include = "explore" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
mujoco = ">=3.5.0"
mujoco-mjx = ">=3.5.0"
tqdm = "4.67.1"
gymnasium = ">=1.2.0"
gymnasium-robotics = ">=1.4.2"
shimmy = "^2.0"
imageio = "2.37.0"
scipy = "1.15.3"
hnswlib = "0.8.0"
cma = "4.3.0"
opencv-python = "4.12.0.88"
h5py = "3.14.0"
stable_baselines3 = "2.7.0"
scikit-learn = "1.7.1"
tensorboard = "2.20.0"
numpy = "*"
matplotlib = "*"
hydrax = { path = "/home/denis/git/hydrax", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
